@@ -1,5 +1,9 @@
+2015-10-27  SilverNexus
+	* configure.ac: Made a configure flag to enable debugging.
+	* Makefile.am: Set up flags for debug and nondebug modes.
+
 2015-06-08  SilverNexus
-    * search.c: Loop optimization in the file search section.
+	* search.c: Loop optimization in the file search section.
 
 2015-06-03  SilverNexus
 	* search.c: Refactor check for failure to load output file to occur
